compile instructions added

--- a/README
+++ b/README
@@ -1,1 +1,17 @@
 Simple ODE framework based on odeint for iOS.
+
+Requirements:
+
+Mac OS X 10.7
+Xcode 4.2
+CMake 2.8
+
+Compile:
+
+#> cd path/to/iNumerics
+#> mkdir build
+#> cd build
+#> cmake -DCMAKE_TOOLCHAIN_FILE=../toolchain/iOS.cmake -GXcode ..
+#> xcodebuild -target install -configuration Release
+
+The result can be found in path/to/iNumerics/dist
