--- a/README
+++ b/README
@@ -33,4 +33,8 @@ cmake -DCMAKE_TOOLCHAIN_FILE=../toolchain/iOS.cmake -DIOS_PLATFORM=SIMULATOR -GX
 xcodebuild -target install -configuration Release
 
 
+Cleaning builds:
+
+./make.sh clean
+
 The static library can be found in path/to/iNumerics/dist
