--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 Simple ODE framework based on odeint for iOS.
 
+http://headmyshoulder.github.com/odeint-v2/
+
 Requirements:
 
 Mac OS X 10.7
@@ -24,11 +26,16 @@ Manual build:
 cd path/to/iNumerics
 mkdir build && cd build
 
-cmake -DCMAKE_TOOLCHAIN_FILE=../toolchain/iOS.cmake -GXcode ..    (building for device)
+if you are building for device:
 
-or
+cmake -DCMAKE_TOOLCHAIN_FILE=../toolchain/iOS.cmake -GXcode ..
 
-cmake -DCMAKE_TOOLCHAIN_FILE=../toolchain/iOS.cmake -DIOS_PLATFORM=SIMULATOR -GXcode ..    (building for simulator)
+or if you are building for simulator:
+
+cmake -DCMAKE_TOOLCHAIN_FILE=../toolchain/iOS.cmake -DIOS_PLATFORM=SIMULATOR -GXcode .. 
+
+
+to finally start the build process:
 
 xcodebuild -target install -configuration Release
 
