--- a/README
+++ b/README
@@ -1,62 +1,64 @@
-Simple ODE framework for iOS. iNumerics currently uses ODE solvers from odeint (https://github.com/headmyshoulder/odeint-v2).
+# Simple ODE framework for iOS.
+
+iNumerics currently uses ODE solvers from [odeint] (https://github.com/headmyshoulder/odeint-v2).
 
 
-Requirements:
+## Requirements:
 
-Mac OS X 10.7
-Xcode 4.2
-CMake 2.8
+- Mac OS X 10.7
+- Xcode 4.2
+- CMake 2.8
 
-Compile:
+## Compile:
 
 Simple build:
 
-cd path/to/iNumerics
+    cd path/to/iNumerics
 
-./make.sh ios-device  (building for device)
-
-or
-
-./make.sh ios-simulator  (building for simulator)
+    ./make.sh ios-device  (building for device)
 
 or
 
-./make.sh x86  (builds for x86, builds example programs)
+    ./make.sh ios-simulator  (building for simulator)
+
+or
+
+    ./make.sh x86  (builds for x86, builds example programs)
 
 
-Manual build:
+## Manual build:
 
-cd path/to/iNumerics
-mkdir build && cd build
+    cd path/to/iNumerics
+    mkdir build && cd build
 
-Building for iOS:
+## Building for iOS:
 
 if you are building for device:
 
-cmake -DCMAKE_TOOLCHAIN_FILE=../toolchain/iOS.cmake -DTARGET_PLATFORM=IOS -GXcode ..
+    cmake -DCMAKE_TOOLCHAIN_FILE=../toolchain/iOS.cmake -DTARGET_PLATFORM=IOS -GXcode ..
 
 or if you are building for simulator:
 
-cmake -DCMAKE_TOOLCHAIN_FILE=../toolchain/iOS.cmake -DTARGET_PLATFORM=IOS -DIOS_PLATFORM=SIMULATOR -GXcode .. 
+    cmake -DCMAKE_TOOLCHAIN_FILE=../toolchain/iOS.cmake -DTARGET_PLATFORM=IOS -DIOS_PLATFORM=SIMULATOR -GXcode .. 
 
 
 to finally start the build process:
 
-xcodebuild -target install -configuration Release
+    xcodebuild -target install -configuration Release
 
-Building for x86:
+## Building for x86:
 
-cmake ..
+    cmake ..
 
 to start the build process and install everything to path/to/iNumerics/dist:
 
-make install
+    make install
 
-Cleaning builds:
+## Cleaning builds:
 
-./make.sh clean
+    ./make.sh clean
 
-Usage:
+## Usage:
 
 The static library libinumerics.a can be found in path/to/iNumerics/dist
 
